# Parallel_Programming_Tests_and_Benchmarks

./: CMakeLists.txt  LICENSE  benchmark.csv
Application_CUDAMultiGPU/: Application_CUDAMultiGPU.cpp  CMakeLists.txt
CPUVectorizedStencil/: CMakeLists.txt  CPUVectorizedStencil_Main.cpp
CUDABiggerAllocationTest/: CMakeLists.txt  CUDABiggerAllocationTest_Main.cpp
CUDAMemoryTransfer/: CMakeLists.txt  CUDAMemoryTransfer_Main.cpp
CUDA_MultiGPU/: CMakeLists.txt  CUDA_MultiGPU.cpp  MultiGPUExecution.cu  MultiGPUExecution.h
Common/: CommonFunctions.cpp  CommonFunctions.h  CommonKernels.cu  CommonKernels.h  MultiGPUExecution.cu  MultiGPUExecution.h  StatisticsKernel.cu  StatisticsKernel.h
CommonKernels/: CommonKernels.cu  CommonKernels.h
IOBenchmark/: CMakeLists.txt  ChunkedCopier.cpp  ChunkedCopier.h  IOBenchmark_Main.cpp
MaskBasedProcessing_OpenCL_vs_CUDA/: CMakeLists.txt  MaskBasedProcessing_OpenCL_vs_CUDA.cu  MaskBasedProcessing_OpenCL_vs_CUDA.h  MaskBasedProcessing_OpenCL_vs_CUDA_Main.cpp  evaluate_benchmark.py
MeasureMaxUsableMemory/: CMakeLists.txt  MeasureMaxUsableMemory_Main.cpp
NDLaunch/: CMakeLists.txt  NDLaunchTest.cu  NDLaunchTest.h  NDLaunchTest_Main.cpp
RawArrayConversion/: CMakeLists.txt  RawArrayConversion.cu  RawArrayConversion.h  RawArrayConversion_Main.cpp
SharedMemory/: CMakeLists.txt  SharedMemoryTest.cu  SharedMemoryTest.h  SharedMemoryTest_Main.cpp
scripts/: generate_nvprof_profile.py  plot_NDLaunch_results.py  plot_multi_GPU_benchmark.py  plot_shared_memory_comparison.py  plot_speedups_and_throughputs.py  test_block_copy.py
